--- a/pymakr.conf
+++ b/pymakr.conf
@@ -1,3 +1,12 @@
 {
-    "name": "Empty Project"
+  "py_ignore": [
+    ".vscode",
+    ".gitignore",
+    ".git",
+    "env",
+    "venv"
+    "requirements.txt"
+    ".bin"
+  ],
+  "name": "esp-dev"
 }
